K8S/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uber-service
  namespace: webapps
spec:
  selector:
    app: uber
  ports:
    - protocol: TCP
      port: 80  # Port exposed by the service internally (inside the cluster)
      targetPort: 3000  # Port your application listens on inside the pods
  type: ClusterIP  # This
